# sterriar-sample-apscheduler-fastapi-daily-jobs

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py  app.py  jobs.py  scheduler.py
tests/: test_app.py  test_jobs.py  test_scheduler.py
