[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apscheduler-fastapi-daily-jobs"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "apscheduler>=3.10.0",
    "uvicorn>=0.24.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.6.0"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
# tests で mock の入れ子 with を許容 (SIM117 は本体コードのみで強制)
"tests/**" = ["SIM117"]

[tool.pytest.ini_options]
testpaths = ["tests"]
